# JAEGIS-AI-Web-OS

./: .eslintrc.js  .gitignore  AUTOMATED_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CODE_OF_CONDUCT.md  COMPLETE_BUILD_INSTRUCTIONS_FOR_THE_ENTIRE_JAEGIS_WEB_OS.docx  CONTRIBUTING.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  GITHUB_REPOSITORY_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JAEGIS_README.md  LICENSE  PRODUCTION_ENHANCEMENT_SUMMARY.md  README-corrected.md  README-enhanced.md  README.md  REPOSITORY_SETUP_COMPLETE.md  SECURITY.md  cli.js  demo_build_plan.json  demo_test.py  deploy-jaegis.sh  package.json  pyproject.toml  repository_setup.md  requirements-dev.txt  requirements.txt  sample_architecture.md  test_cli_direct.py  test_document_processing.py  test_python.py  test_with_text_file.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  dependency-update.yml  repository-intelligence.yml  security-audit.yml
docs/: ACCESSIBILITY_COMPLIANCE_REPORT.md  COMPREHENSIVE_REMEDIATION_SUMMARY.md  DEPENDENCY_ANALYSIS.md  DEVELOPMENT_VELOCITY.md  DOCUMENTATION_QA_SUMMARY.md  DOCUMENTATION_STRUCTURE_ANALYSIS.md  LINK_VALIDATION_REPORT.md  README.md
docs/api/: python-api.md
docs/architecture/: ai-integration.md  caching-strategy.md  component-diagrams.md  data-flow.md  system-overview-fixed.md  system-overview.md
docs/examples/: README-fixed.md  README.md  custom-templates.md  django-api.md  fastapi-microservice.md  nextjs-ecommerce.md  python-cli.md
docs/guides/: ai-providers.md  configuration.md  deployment.md  getting-started.md  performance.md  redis-integration-fixed.md  redis-integration.md
docs/redis-hackathon/: IMPLEMENTATION_SUMMARY.md  REDIS_HACKATHON_MASTER_PROMPT.md  REDIS_MASTER_PROMPT.md  VECTOR_IMPLEMENTATION_COMPLETE.md
jaegis-os/: package.json
mcp_server/: __init__.py  __main__.py  ai_providers.py  asm.py  builder.py  cache_manager.py  config_manager.py  enhanced_asm.py  enhanced_builder.py  enhanced_cli.py  enhanced_ingestion.py  error_handling.py  ingestion.py  prompt_engineering.py
mcp_server/templates/: __init__.py  base_template.py  django_template.py  fastapi_template.py  nextjs_template.py  python_template.py  react_template.py
prisma/: schema.prisma
scripts/: configure-repository.sh  deploy-all.sh  deploy-to-github.sh  publish-packages.sh  verify-deployment.sh
src/app/api/mcp/sessions/: route.ts
src/app/api/mcp/sessions/[id]/: route.ts
src/components/apps/OSBuilder/: OSBuilderApp.tsx
src/services/mcp-server/: MCPServerOrchestrator.ts  VectorAwareMCPOrchestrator.ts
src/services/mcp-server/ai/: ZaiSDKClient.ts
src/services/mcp-server/builder/: OSBuilderEngine.ts  VectorAwareOSBuilder.ts
src/services/mcp-server/generators/: SpecificationGenerator.ts
src/services/mcp-server/introspection/: SystemIntrospector.ts
src/services/mcp-server/parser/: BuildDocumentParser.ts  VectorBuildDocumentParser.ts
src/services/mcp-server/vector/: ConceptualMapper.ts  RedisVectorStore.ts  SemanticRetriever.ts
test/: test-cli.js
tests/unit/: test_enhanced_ingestion.py
